# binary-serialize

./: CMakeLists.txt  README.md  annotated.html  binary__serialize_8hpp.html  binary__serialize_8hpp__incl.map  binary__serialize_8hpp__incl.md5  binary__serialize_8hpp_source.html  binary__serialize__example_8cpp.html  binary__serialize__example_8cpp__incl.map  binary__serialize__example_8cpp__incl.md5  binary__serialize__test_8cpp.html  binary__serialize__test_8cpp__incl.map  binary__serialize__test_8cpp__incl.md5  byteswap_8hpp.html  byteswap_8hpp__dep__incl.map  byteswap_8hpp__dep__incl.md5  byteswap_8hpp__incl.map  byteswap_8hpp__incl.md5  byteswap_8hpp_source.html  byteswap__test_8cpp.html  byteswap__test_8cpp__incl.map  byteswap__test_8cpp__incl.md5  classchops_1_1fixed__size__byte__array-members.html  classchops_1_1fixed__size__byte__array.html  classes.html  classfixed__size__byte__array-members.html  classfixed__size__byte__array.html  conceptchops_1_1integral__or__byte.html  concepts.html  dir_000003_000001.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d6dce8604daa6d974602991ede05feb6.html  dir_d6dce8604daa6d974602991ede05feb6_dep.map  dir_d6dce8604daa6d974602991ede05feb6_dep.md5  doxygen_crawl.html  extract__append_8hpp.html  (+18 more)
.github/workflows/: build_run_unit_test_cmake.yml
doc/: Doxyfile
example/: CMakeLists.txt  binary_serialize_example.cpp
include/serialize/: binary_serialize.hpp  byteswap.hpp  extract_append.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  concepts_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  searchdata.js
test/: CMakeLists.txt  binary_serialize_test.cpp  byteswap_test.cpp  extract_append_test.cpp
